Replaced settings class with Montoya settings build. Added excluded headers. Fixed a couple of issues like the modified path not sending a forward slash.